--- a/KMeansClustering/KMeansClustering/App.xaml
+++ b/KMeansClustering/KMeansClustering/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="KMeansClustering.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="TestDBSCAN.xaml">
+             StartupUri="Main.xaml">
     <Application.Resources>
          
     </Application.Resources>
